# somewhatmodernhsm

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  meson.build
.devcontainer/: devcontainer.json
.github/workflows/: cmake.yml  codecov.yml  codeql-analysis.yml  meson.yml
example/: CMakeLists.txt  door.cpp  door.h  main.cpp
example/mdoor/: CMakeLists.txt  main.cpp  mdoor.cpp  mdoor.h  meson.build
example/watch/: main.cpp  meson.build  watch.cpp  watch.h
example/wizard/: CMakeLists.txt  main.cpp  meson.build  wizard.cpp  wizard.h
src/: CMakeLists.txt  hsm.cpp  hsm.h  main.cpp  meson.build
subprojects/: glog.wrap
tests/: CMakeLists.txt  meson.build  test_door.cpp  test_glog.cpp  test_mdoor.cpp  test_watch.cpp  testgtest.cpp
