project('Modern HSM',
        'cpp',
        version: '2.0.0',
        default_options : ['warning_level=everything',
                           'cpp_std=c++20',
                           'cpp_args=-Wno-abi -Wno-abi-tag -Wno-noexcept'])

subdir('src')
subdir('example/mdoor')
subdir('example/watch')
subdir('example/wizard')
subdir('tests')
